CHANGES: blog/posts/2025-10-04-v0-4-5.md(M) -

--- a/docs/blog/posts/2025-10-04-v0-4-5.md
+++ b/docs/blog/posts/2025-10-04-v0-4-5.md
@@ -5,5 +5,5 @@ categories:
     - release
 ---
  
-* added support for amp, droid, warp, goose, grok CLIO coding agents
+* added support for `amp`, `droid`, `warp`, `goose`, `grok` CLI coding agents
 * some source code cleanup
